# fastapi-plotly-extension

./: Makefile  README.md  environment.yml  pyproject.toml
charts/: PlotlyBar.py  PlotlyBox.py  PlotlyChart.py  PlotlyHist.py  PlotlyLine.py  PlotlyScatter.py  __init__.py
